# mdpage

./: .gitignore  Cargo.toml  README.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: build.yml  docs.yml  release.yml
assets/: style.css
ci/: install-hub.sh  install-rust.sh  install-rustup.sh  make-release.sh
docs/: TODO.md  build.sh  config.md  examples.md  footer.md  header.md  index.html  index.md  install.md  mdpage.json  mdpage.toml  mdpage2.json  usage.md
docs/examples/basic/: index.html  page1.md  page2.md  readme.md
docs/examples/config/: index.html  mdpage.toml  mdpage2.json  page1.md  readme.md
docs/examples/config_dir/: index.html  index.md  mdpage.json
docs/examples/full_page/: code.md  footer.md  index.html
docs/examples/sections/: index.html  index.md
docs/examples/single/: index.html  readme.md
docs/examples/single_index/: index.html
docs/examples/single_page/: index.html
src/: content.rs  data.rs  lib.rs  main.rs  utils.rs  writer.rs
src/templates/: css.hbs  full.hbs  index.hbs  multi.hbs  normalize.hbs
tests/: build_expected1.json  build_expected2.json  build_expected3.json  build_expected4.json  build_expected_dir.json  build_expected_html.json  build_expected_single.json  build_expected_single_page.json  test_data_build.rs
tests/fixtures/data/: doc.md  file1.md  init_expected1.json  init_expected2.json  init_expected3.json  init_expected_single.json  init_seed1.json  readme.md
tests/fixtures/data/dir1/: page1.md  (+2 more)
tests/fixtures/utils/: title2.md
tests/fixtures/utils2/: index.md  title.md
tests/fixtures/utils3/: README.md  title.md
(+13 files in other folders)
