[package]
name = "mdpage"
version = "0.1.0"
authors = ["Bojan D. <dbojan@gmail.com>"]
edition = "2018"
documentation = "http://bojand.github.io/mdpage/index.html"
exclude = ["/docs/*"]
keywords = ["documentation", "markdown"]
license = "APL-2.0"
readme = "README.md"
repository = "https://github.com/bojand/mdpage"
description = "Simple documentation tool"

[dependencies]
comrak = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.5"
handlebars = "3.0.0-beta.5"
voca_rs = "1.9.1"
structopt = { version = "0.3", default-features = false }
derivative = "1.0.3"
log = "0.4.8"
env_logger = "0.7.1"

[[bin]]
doc = false
name = "mdpage"